Menu scroll fix

--- a/learnix/src/main.css
+++ b/learnix/src/main.css
@@ -55,6 +55,12 @@ html,
             background-color: darkslateblue;
         }
 
+        .menu-list.root {
+            flex: 1;
+            overflow-y: auto;
+            scrollbar-width: thin;
+        }
+
         .menu-item {
             cursor: pointer;
             line-height: 50px;
@@ -66,7 +72,7 @@ html,
         }
 
         .menu-item.expand {
-            border-color: rgba(30, 144, 255, .7);
+            border-color: rgba(30, 144, 255, 1);
         }
 
         .menu-item.expand .menu-item.expand {
