--- a/learnix/src/main.css
+++ b/learnix/src/main.css
@@ -21,6 +21,7 @@ html,
         a {
             color: black;
             text-decoration: none;
+            cursor:pointer;
         }
 
         ::-webkit-scrollbar {
@@ -145,7 +146,7 @@ html,
         }
 
         .main-info {
-            flex: 0.25;
+            flex: .25;
             padding: 12.5px;
             background-color: bisque;
         }
