Add possibility to search pokemon

--- a/showcase/showpad/src/shared/components/search/search.component.html
+++ b/showcase/showpad/src/shared/components/search/search.component.html
@@ -1,3 +1,4 @@
 <div class="search">
-  <app-input label="Search"></app-input><app-mini-fab-button class="search-icon" icon="search"></app-mini-fab-button>
+  <app-input label="Search" color="accent" [control]="control"></app-input
+  ><app-mini-fab-button class="search-icon" icon="search" (clicked)="search.emit(control.value)"></app-mini-fab-button>
 </div>
