--- a/showcase/showpad/src/modules/pokemons/pokemons.component.html
+++ b/showcase/showpad/src/modules/pokemons/pokemons.component.html
@@ -5,5 +5,6 @@
   [pageSize]="pageSize"
   [total]="pokemonData.total"
   [loading]="$any(loading$ | async)"
+  (search)="search($event)"
   (navigate)="loadPage($event)"
 ></app-table>
