--- a/showcase/showpad/src/shared/components/input/input.component.html
+++ b/showcase/showpad/src/shared/components/input/input.component.html
@@ -1,4 +1,4 @@
-<mat-form-field [appearance]="appearance">
+<mat-form-field [appearance]="appearance" [color]="color">
   <mat-label>{{label}}</mat-label>
-  <input matInput [placeholder]="placeholder">
+  <input matInput [placeholder]="placeholder" [formControl]="control">
 </mat-form-field>
