--- a/showcase/showpad/src/shared/components/table/table.component.scss
+++ b/showcase/showpad/src/shared/components/table/table.component.scss
@@ -17,6 +17,17 @@
   padding-top: 16px;
 }
 
+.hint {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  padding: 0 12px 16px;
+}
+
+.hint-icon {
+  margin-right: 8px;
+}
+
 table {
   width: 100%;
 }
