--- a/showcase/showpad/src/modules/pokemons/pokemons.component.html
+++ b/showcase/showpad/src/modules/pokemons/pokemons.component.html
@@ -1,3 +1,5 @@
+<app-menu class="menu"></app-menu>
+
 <app-table
   *ngIf="pokemonData$ | async as pokemonData"
   hint="Click on a row in order for item menu to appear"
