Update spinner styles on a profile page

--- a/showcase/showpad/src/modules/profile/profile.component.html
+++ b/showcase/showpad/src/modules/profile/profile.component.html
@@ -1,1 +1,5 @@
-<app-menu class="menu"></app-menu>
+<div class="profile">
+  <app-menu class="menu"></app-menu>
+
+  <app-spinner class="spinner"></app-spinner>
+</div>
