Update profile; add accordion component

--- a/showcase/showpad/src/modules/profile/profile.component.html
+++ b/showcase/showpad/src/modules/profile/profile.component.html
@@ -4,6 +4,8 @@
   <app-spinner *ngIf="loading$ | async; else profile" class="spinner"></app-spinner>
 
   <ng-template #profile>
-    <h2>Name: {{name}}</h2>
+    <h2>Pokemon: {{name}}</h2>
+
+    <app-accordion [panels]="panels"></app-accordion>
   </ng-template>
 </div>
