Add chips component

--- a/showcase/showpad/src/modules/ive-caught/ive-caught.component.html
+++ b/showcase/showpad/src/modules/ive-caught/ive-caught.component.html
@@ -1,1 +1,7 @@
 <app-menu class="menu"></app-menu>
+
+<div class="list-headline">
+  <h2>I've caught</h2> <app-mini-fab-button icon="delete" color="warn"></app-mini-fab-button>
+</div>
+
+<app-chips [chips]="pokemons" color="accent"></app-chips>
