--- a/showcase/showpad/src/styles.scss
+++ b/showcase/showpad/src/styles.scss
@@ -23,3 +23,9 @@ mat-dialog-actions {
   display: block;
   padding: 16px 0;
 }
+
+.list-headline {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
