--- a/showcase/showpad/src/modules/wishlist/wishlist.component.html
+++ b/showcase/showpad/src/modules/wishlist/wishlist.component.html
@@ -1,7 +1,11 @@
 <app-menu class="menu"></app-menu>
 
-<div class="list-headline">
-  <h2>Wishlist</h2> <app-mini-fab-button icon="delete" color="warn"></app-mini-fab-button>
-</div>
+<ng-container *ngIf="pokemons$| async as pokemons">
+  <div class="list-headline">
+    <h2>Wishlist</h2> <app-mini-fab-button *ngIf="pokemons.length" icon="delete" color="warn" (clicked)="openRemoveDialog()"></app-mini-fab-button>
+  </div>
 
-<app-chips [chips]="pokemons"></app-chips>
+  <app-chips *ngIf="pokemons.length; else empty" [chips]="pokemons"></app-chips>
+
+  <ng-template #empty>Empty :(</ng-template>
+</ng-container>
