Add width boundaries for accordion

--- a/showcase/showpad/src/modules/profile/profile.component.html
+++ b/showcase/showpad/src/modules/profile/profile.component.html
@@ -6,6 +6,6 @@
   <ng-template #profile>
     <h2>Pokemon: {{name}}</h2>
 
-    <app-accordion [panels]="panels"></app-accordion>
+    <app-accordion [panels]="panels" class="accordion"></app-accordion>
   </ng-template>
 </div>
