--- a/showcase/showpad/src/shared/components/table/table.component.html
+++ b/showcase/showpad/src/shared/components/table/table.component.html
@@ -15,8 +15,8 @@
       <td mat-cell *matCellDef="let element"> {{element[column.name]}} </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="['name']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['name'];" (click)="rowClicked.emit(row)"></tr>
+    <tr mat-header-row *matHeaderRowDef="visibleColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: visibleColumns;" (click)="rowClicked.emit(row)"></tr>
   </table>
 
   <div class="footer">
